# GLFW_GL_ENGINE

./: .gitignore  CMakeLists.txt  README.md  config.lua  stb_image.h
shaders/: simple.frag  simple.vert  sphere.frag  sphere.tc  sphere.te  sphere.vert
src/: Engine.cpp  Engine.h  EventManager.cpp  EventManager.h  GenericShapes.cpp  GenericShapes.h  SceneA.cpp  SceneA.h  SceneB.cpp  SceneB.h  ShaderConstructor.cpp  ShaderConstructor.h  Shape.cpp  Shape.h  main.cpp
